SOLR-16869: Use Panama Vector apis for Java 20/21 (#1758)